# ocrnasa

./: .gitignore  ocrv1.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: Tesseract_ocr.py  ollamaocr.py  process_document.py
