# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

pythonpath = [
  "src" 
]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
frontend = ["static/*", "templates/*"]